# ms-ai-school

./: README.md  main.py  pyproject.toml  requirements.txt
241231_python_DataAnalysis/: OverTheMoon_유성우.ipynb  pythontest.ipynb
250122_python_Machine_Learning/: 01_회귀_광고플랫폼 판매량 예측_실습.ipynb  02_회귀_공공자전거 수요 예측_실습.ipynb  03_분류_붓꽃_실습.ipynb  04_분류_로켓발사_실습.ipynb  20_군집화_실습.ipynb  22_군집화_프로야구_실습.ipynb
250131_web_crawling/: 40_브라우저 제어하기_배포.ipynb  네이버증권뉴스  네이버증권뉴스.xlsx  네이버증권뉴스_2025-01-29.csv  네이버증권뉴스_2025-01-29.xlsx
250204-250210_Azure_OpenCV/ch2/: 2-2.py  2-3.py  2-6.py  2-7.py  2-9.py
250204-250210_Azure_OpenCV/ch3/: 3-1.py  3-2.py  3-3.py  3-4.py  3-5.py  3-6.py  3-7.py  3-8.py  3-9.py
250204-250210_Azure_OpenCV/ch4/: 4-1.py  4-2.py  4-3.py  4-4.py  4-6.py  4-7.py
250211_Iris_Prediction/: iris_prediction.ipynb
250211_Iris_Prediction/.gradio/flagged/: dataset1.csv
250227-250307_HTML_CSS_Javascript/01_html/: 00_test.html  01_텍스트관련태그.html  02_텍스트포메팅.html  03_하이퍼링크.html  04_목록태그.html  05_1_테이블병합.html  05_테이블.html  06_이미지.html  07_멀티미디어.html  08_레시피소개.html  11_login.html
250227-250307_HTML_CSS_Javascript/02_css/: 01_선택자연습.css  01_선택자연습.html  02_1_어린왕자.css  02_1_어린왕자.html  02_글꼴스타일.css  02_글꼴스타일.html  03_1_명언카드.html  03_박스모델.html  04_미디어쿼리.html  05_디스플레이.html  06_디스플레이_그리드.html  space.html  갤러리.css  갤러리.html
250227-250307_HTML_CSS_Javascript/03_javascript/1_기본문법/: 00_start.html  01_변수.js  02_숫자형.js  03_문자열.js  04_논리형외.js  05_원의넓이.js  06_형변환.js  07_조건문.js  08_삼항연산자.js  09_switch.js  10_월별날짜수 구하기.js  11_반복문.js  12_함수선언문.js  13_함수연습문제(홀짝).js  14_객체타입.js  14_시간.js  15_Math객체.js  16_Array객체.js  17_Date객체.js  18.JSON객체.js  19.로컬스토리지객체.html
250227-250307_HTML_CSS_Javascript/03_javascript/2_DOM/: 01_요소취득_id_배포.html  02_요소취득_tag_배포.html  03_요소취득_class_배포.html  04_요소취득_선택자_배포.html  05_요소탐색_배포.html  06_텍스트조작_배포.html  07_내부HTML조작_배포.html  08_요소생성및추가_배포.html  09_요소삭제_배포.html  10_속성다루기_배포.html  style.css
250227-250307_HTML_CSS_Javascript/03_javascript/3_이벤트/: 00_이벤트_드리븐.html  01_이벤트_인라인_배포.html  02_이벤트_DOM속성_배포.html  03_이벤트_이벤트리스너메서드_배포.html  04_마우스이벤트객체_배포.html  05_키보드이벤트객체_배포.html
250227-250307_HTML_CSS_Javascript/03_javascript/9_실습문제/: 01_자리배치도.js  01_자리배치도_배포.html  02_저금액시뮬레이션.js  02_저금액시뮬레이션_배포.html
250227-250307_HTML_CSS_Javascript/03_javascript/9_실습문제/03_todolist/: script.js
250227-250307_HTML_CSS_Javascript/03_javascript/9_실습문제/04_updown/: up_down.js
250227-250307_HTML_CSS_Javascript/03_javascript/9_실습문제/05_rock_paper_scissors/: rock_paper_scissors copy.js  rock_paper_scissors.html  rock_paper_scissors.js
250310_OpenAI_Service_gpt_dalle/: calculate.css  calculate.html  calculate.js  dw+openai_20250311.ipynb  odung.html  openai_gpt_Dalle_20250310.ipynb
250312_OpenAI_AIsearch_tourist/: dw+openai_ai_search.ipynb  openai_aisearch_tourist.ipynb  travel-index.json
250313_AIsearch_project/Bread/: Bread_AIsearch.ipynb  bread-index.json  bread-indexer.json  bread_daejeon_csv.ipynb  bread_data.csv  대전광역시 서구_제과점 현황_20241025.csv  대전광역시 중구_제과점_20241126.csv
250313_AIsearch_project/Pokemon/: Pokemon_AIsearch.ipynb  crawlingPokemon_csv.ipynb  pokemon-index.json  pokemon-indexer.json  pokemon_data.csv
250314_AIsearch_Gradio_Pokemon/: Pokemon_AIsearch.py  Pokemon_AIsearch_gradio.ipynb  gradio_prologue.ipynb  requirements.txt
250317_AIspeech_Azure/SpeechCLI/: Speech_CLI.md  each.133866573457917113.tsv  key  output.133866573457917113.tsv  region  translate_sample.txt
250318_AIspeech_Gradio/: ai_speech.ipynb
250319_Document_Intelligence/: ai_document_intelligence.ipynb
250320-250321_AI_Language_steam/: ai_language_EntityRecognition.ipynb  ai_service_steam_review.ipynb
250324_AIvision/: AI_vision.ipynb
250325_AIvision_video_indexer/: AI_vision_video_indexer.ipynb
250326_Custom_Vision_python/: custom_vision.ipynb
250326_Custom_Vision_python/kitchen-v1/: cvexport.manifest  labels.txt
250326_Custom_Vision_python/kitchen-v1/python/: onnxruntime_predict.py
250327-250328_yolo/: .gitignore  yolov3.ipynb  yolov8.ipynb
250327_Open_CV/: opencv_face.ipynb
