[project]
name = "ms-ai-school"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.1",
    "aiohappyeyeballs==2.5.0",
    "aiohttp==3.11.13",
    "aiosignal==1.3.2",
    "analytics-python==1.4.post1",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.4",
    "attrs==25.1.0",
    "azure-cognitiveservices-vision-customvision==3.1.1",
    "azure-common==1.1.28",
    "azure-core==1.32.0",
    "azure-mgmt-core==1.5.0",
    "babel==2.17.0",
    "backoff==1.10.0",
    "bcrypt==4.3.0",
    "beautifulsoup4==4.13.3",
    "bleach==6.2.0",
    "blinker==1.9.0",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "chromedriver-autoinstaller==0.6.4",
    "click==8.1.8",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "cryptography==44.0.2",
    "cycler==0.12.1",
    "debugpy==1.8.11",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "distro==1.9.0",
    "et-xmlfile==2.0.0",
    "exceptiongroup==1.2.2",
    "executing==2.1.0",
    "fastapi==0.115.11",
    "fastjsonschema==2.21.1",
    "ffmpy==0.5.0",
    "filelock==3.17.0",
    "flask==3.1.0",
    "flask-cachebuster==1.0.0",
    "flask-cors==5.0.1",
    "flask-login==0.6.3",
    "flatbuffers==25.2.10",
    "fonttools==4.56.0",
    "fqdn==1.5.1",
    "frozenlist==1.5.0",
    "fsspec==2025.3.0",
    "gradio==5.21.0",
    "gradio-client==1.7.2",
    "groovy==0.1.2",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "huggingface-hub==0.29.3",
    "humanfriendly==10.0",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "ipykernel==6.29.5",
    "ipython==9.0.2",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.5",
    "isodate==0.7.2",
    "isoduration==20.11.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "json5==0.10.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter==1.1.1",
    "jupyter-client==8.6.3",
    "jupyter-console==6.6.3",
    "jupyter-core==5.7.2",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.15.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.3.5",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "jupyterlab-widgets==3.0.13",
    "kiwisolver==1.4.8",
    "markdown-it-py==3.0.0",
    "markdown2==2.5.3",
    "markupsafe==2.1.5",
    "matplotlib==3.10.1",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistune==3.1.2",
    "monotonic==1.6",
    "mpmath==1.3.0",
    "msrest==0.7.1",
    "multidict==6.1.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "notebook==7.3.2",
    "notebook-shim==0.2.4",
    "numpy==2.2.3",
    "oauthlib==3.2.2",
    "onnx==1.17.0",
    "onnxruntime==1.21.0",
    "openai==1.65.5",
    "openpyxl==3.1.5",
    "orjson==3.10.15",
    "outcome==1.3.0.post0",
    "overrides==7.7.0",
    "packaging==24.2",
    "panda==0.3.1",
    "pandas==2.2.3",
    "pandocfilters==1.5.1",
    "paramiko==3.5.1",
    "parso==0.8.4",
    "pickleshare==0.7.5",
    "pillow==11.1.0",
    "pip==25.0",
    "platformdirs==4.3.6",
    "prometheus-client==0.21.1",
    "prompt-toolkit==3.0.50",
    "propcache==0.3.0",
    "protobuf==6.30.1",
    "psutil==5.9.0",
    "pure-eval==0.2.3",
    "pycparser==2.22",
    "pycryptodome==3.21.0",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydub==0.25.1",
    "pygments==2.19.1",
    "pynacl==1.5.0",
    "pyparsing==3.2.1",
    "pyreadline3==3.5.4",
    "pysocks==1.7.1",
    "python==3.12.9",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-json-logger==3.3.0",
    "python-multipart==0.0.20",
    "pytz==2025.1",
    "pywin32==308",
    "pywinpty==2.0.15",
    "pyyaml==6.0.2",
    "pyzmq==26.3.0",
    "referencing==0.36.2",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==13.9.4",
    "rpds-py==0.23.1",
    "ruff==0.10.0",
    "safehttpx==0.1.6",
    "selenium==4.29.0",
    "semantic-version==2.10.0",
    "send2trash==1.8.3",
    "setuptools==75.8.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.6",
    "sqlite==3.45.3",
    "stack-data==0.6.3",
    "starlette==0.46.1",
    "sympy==1.13.3",
    "terminado==0.18.1",
    "tinycss2==1.4.0",
    "tk==8.6.14",
    "tomlkit==0.13.2",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "trio==0.29.0",
    "trio-websocket==0.12.2",
    "typer==0.15.2",
    "types-python-dateutil==2.9.0.20241206",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "ucrt==10.0.22621.0",
    "uri-template==1.3.0",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "vc==14.42",
    "vc14-runtime==14.42.34438",
    "vs2015-runtime==14.42.34438",
]
